--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,14 +28,14 @@ android {
         }
     }
 
-    def isRunningOnTravis = System.getenv("CI") == "true"
+    /*def isRunningOnTravis = System.getenv("CI") == "true"
 
     if (isRunningOnTravis) {
         signingConfigs.release.storeFile = file("../sonofy.jks")
         signingConfigs.release.storePassword = System.getenv("keystore_password")
         signingConfigs.release.keyAlias = System.getenv("keystore_alias")
         signingConfigs.release.keyPassword = System.getenv("key_password")
-    }
+    }*/
 }
 
 dependencies {
