--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,9 +31,15 @@ android {
     def isRunningOnTravis = System.getenv("CI") == "true"
 
     if (isRunningOnTravis) {
+    
+        def Properties props = new Properties()
+        def propFile = new File('signing.properties')
+        if (propFile.canRead()){
+            props.load(new FileInputStream(propFile))
+    
         signingConfigs.release.storeFile = file("../sonofy.jks")
         signingConfigs.release.storePassword = "6XDRHc" //System.getenv("keystore_password")
-        signingConfigs.release.keyAlias = System.getenv("KEYSTORE_ALIAS")
+        signingConfigs.release.keyAlias = props['KEYSTORE_ALIAS'] //System.getenv("KEYSTORE_ALIAS")
         signingConfigs.release.keyPassword = System.getenv("key_password")
     }
 }
