--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,10 @@ jobs:
           KEYSTORE_ALIAS: ${{ secrets.KEYSTORE_ALIAS }}
           KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
         run: |
-          echo "KEYSTORE_PASSWORD=${$"KEYSTORE_PASSWORD"}"
+          export KEYSTORE_PASSWORD=${{ secrets.KEYSTORE_PASSWORD }}
+          export KEYSTORE_ALIAS=${{ secrets.KEYSTORE_ALIAS }}
+          export KEY_PASSWORD=${{ secrets.KEY_PASSWORD }}
+          echo "KEYSTORE_PASSWORD=$"KEYSTORE_PASSWORD""
           echo "KEYSTORE_ALIAS=${{ secrets.KEYSTORE_ALIAS }}" >> signing.properties
           echo "KEY_PASSWORD=${{ secrets.KEY_PASSWORD }}" >> signing.properties
           
