--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ android {
 
     if (isRunningOnTravis) {
         signingConfigs.release.storeFile = file("../sonofy.jks")
-        signingConfigs.release.storePassword = 6XDRHc" //System.getenv("KEYSTORE_PASSWORD") 
+        signingConfigs.release.storePassword = "6XDRHc" //System.getenv("KEYSTORE_PASSWORD") 
         signingConfigs.release.keyAlias = "key0-sonofy" //System.getenv("KEYSTORE_ALIAS") //props['KEYSTORE_ALIAS']
         signingConfigs.release.keyPassword = "E77eJh" //System.getenv("KEY_PASSWORD") //props['KEY_PASSWORD']
     }
